feat: Setup swagger generation, auth token handling, api calls and implemented a temp sign-up page

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -12,6 +12,8 @@ analyzer:
 
   exclude:
     - "**/*.g.dart"
+    - "**/*.swagger.dart"
+    - "**/*.chopper.dart"
     - "**/*.freezed.dart"
   language:
     strict-casts: true
