--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,16 +3,17 @@ version: 0.0.1+1
 publish_to: none
 description: A new Flutter project.
 environment:
-  sdk: '>=3.2.0 <4.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 dependencies:
   auto_route: ^7.8.4
+  chopper: ^7.0.9
   connectivity_plus: ^5.0.2
   crypto: ^3.0.3
   cupertino_icons: ^1.0.6
-  dio: ^5.3.4
-  firebase_auth: ^4.14.1
-  firebase_core: ^2.23.0
-  firebase_messaging: ^14.7.5
+  dio: ^5.4.0
+  firebase_auth: ^4.15.1
+  firebase_core: ^2.24.1
+  firebase_messaging: ^14.7.7
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
@@ -21,6 +22,8 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   freezed_annotation: ^2.4.1
   google_sign_in: ^6.1.6
+  json_annotation: ^4.8.1
+  jwt_decoder: ^2.0.1
   logger: ^2.0.2+1
   package_info_plus: ^5.0.1
   pretty_dio_logger: ^1.3.1
@@ -28,13 +31,15 @@ dependencies:
 
 dev_dependencies:
   auto_route_generator: ^7.3.2
-  build_runner: ^2.4.6
+  build_runner: ^2.4.7
+  chopper_generator: ^7.0.6
   flutter_gen_runner: ^5.3.2
   flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
   freezed: ^2.4.5
   json_serializable: ^6.7.1
+  swagger_dart_code_generator: ^2.13.2
   very_good_analysis: ^5.1.0
 
 flutter:
