feat(performance): Replace chopper/swagger with native HTTP in an isolate for modularity and performance

--- a/build.yaml
+++ b/build.yaml
@@ -5,4 +5,5 @@ targets:
         options:
           input_folder: 'lib/api/'
           output_folder: 'lib/api/generated/'
-          separate_models: true
+          build_only_models: true
+
