--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
+  flutter_native_splash: ^2.3.8
   flutter_riverpod: ^2.4.9
   flutter_screenutil: ^5.9.0
   flutter_secure_storage: ^9.0.0
@@ -41,3 +42,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/logo.png
