feat: setup internationalization

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
+  flutter_localizations:
+    sdk: flutter
   flutter_native_splash: ^2.3.8
   flutter_riverpod: ^2.4.9
   flutter_screenutil: ^5.9.0
@@ -22,6 +24,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   google_sign_in: ^6.2.1
   http: ^1.1.2
+  intl: any
   json_annotation: ^4.8.1
   jwt_decoder: ^2.0.1
   logger: ^2.0.2+1
@@ -41,6 +44,7 @@ dev_dependencies:
   very_good_analysis: ^5.1.0
 
 flutter:
+  generate: true
   uses-material-design: true
   assets:
     - assets/logo.png
