--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,12 @@ dependencies:
   connectivity_plus: ^5.0.2
   crypto: ^3.0.3
   cupertino_icons: ^1.0.6
+  firebase_analytics: ^10.7.4
   firebase_auth: ^4.15.3
   firebase_core: ^2.24.2
+  firebase_crashlytics: ^3.4.8
   firebase_messaging: ^14.7.9
+  firebase_performance: ^0.9.3+8
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
