feat(notification): setup FCM_Notification token handling

--- a/build.yaml
+++ b/build.yaml
@@ -6,4 +6,5 @@ targets:
           input_folder: 'lib/api/'
           output_folder: 'lib/api/generated/'
           build_only_models: true
+          include_if_null: false
 
