--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   connectivity_plus: ^5.0.2
   crypto: ^3.0.3
   cupertino_icons: ^1.0.6
+  device_info_plus: ^9.1.1
   firebase_analytics: ^10.7.4
   firebase_auth: ^4.15.3
   firebase_core: ^2.24.2
