[WIP] feat(notification): working on local notifications

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -101,4 +101,6 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
+}
